Update 02.Kolokvium.java